#scroll-main overflow-x fix

--- a/src/app/styles/sales.scss
+++ b/src/app/styles/sales.scss
@@ -1,4 +1,5 @@
 #scroll-main {
   overflow-y: scroll;
+  overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
 }
